<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.spring-middleware</groupId>
    <artifactId>reference-service</artifactId>
    <version>${reference.version}</version>
    <packaging>pom</packaging>

    <properties>
        <spring-middleware.api.version>1.0.0</spring-middleware.api.version>
        <spring-middleware.app.version>1.3.0</spring-middleware.app.version>
        <spring-middleware.mongo-core.version>1.1.0</spring-middleware.mongo-core.version>
        <spring-middleware.graphql.version>1.0.0</spring-middleware.graphql.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <reference.version>1.0.0</reference.version>
        <catalog.version>1.0.0</catalog.version>
        <product.version>1.0.0</product.version>
    </properties>

    <modules>
        <module>catalog-service</module>
        <module>product-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>3.4.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.github.spring-middleware</groupId>
                <artifactId>api</artifactId>
                <version>${spring-middleware.api.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.spring-middleware</groupId>
                <artifactId>app</artifactId>
                <version>${spring-middleware.app.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.spring-middleware</groupId>
                <artifactId>mongo-core</artifactId>
                <version>${spring-middleware.mongo-core.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.spring-middleware</groupId>
                <artifactId>graphql</artifactId>
                <version>${spring-middleware.graphql.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>